@@ -13,10 +13,18 @@ repositories {
 dependencies {
     compileOnly("org.jetbrains:annotations:26.0.2")
     implementation("org.yaml:snakeyaml:2.2")
+    implementation("org.jline:jline:3.25.1")
+    implementation("org.jline:jline-terminal-jansi:3.25.1")
+    implementation("org.jline:jline-terminal-ffm:3.25.1")
     implementation("org.kohsuke:github-api:1.327")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+    standardInput = System.`in`
 }
 
 tasks.shadowJar {
